// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> circle button should match snapshot 1`] = `
.c0 {
  background-color: #214154;
  border: 1px solid #08283B;
  color: #f6f6f6;
  cursor: pointer;
  display: inline-block;
  padding: 0;
  box-sizing: border-box;
  font-size: 0.85rem;
  line-height: 2rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  -webkit-transition-duration: 0.5s;
  transition-duration: 0.5s;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  border-radius: 50%;
  height: 2rem;
  text-align: center;
  width: 2rem;
}

.c0 i {
  position: relative;
  top: 2px;
}

.c0:hover {
  background-color: #3B5B6E;
  color: #f6f6f6;
}

<button
  className="c0"
>
  Button
</button>
`;

exports[`<Button /> default button should match snapshot 1`] = `
.c0 {
  background-color: #214154;
  border: 1px solid #08283B;
  color: #f6f6f6;
  cursor: pointer;
  display: inline-block;
  padding: 0 .75rem;
  box-sizing: border-box;
  font-size: 0.85rem;
  line-height: 2rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  -webkit-transition-duration: 0.5s;
  transition-duration: 0.5s;
  -webkit-transition-property: background-color;
  transition-property: background-color;
}

.c0:hover {
  background-color: #3B5B6E;
  color: #f6f6f6;
}

<button
  className="c0"
>
  Button
</button>
`;

exports[`<Button /> link button should match snapshot 1`] = `
.c0 {
  background-color: #214154;
  border: 1px solid #08283B;
  color: #f6f6f6;
  cursor: pointer;
  display: inline-block;
  padding: 0 .75rem;
  box-sizing: border-box;
  font-size: 0.85rem;
  line-height: 2rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  -webkit-transition-duration: 0.5s;
  transition-duration: 0.5s;
  -webkit-transition-property: background-color;
  transition-property: background-color;
}

.c0:hover {
  background-color: #3B5B6E;
  color: #f6f6f6;
}

<a
  className="c0"
  href="https://www.gauti.info/nag-me"
>
  Link
</a>
`;

exports[`<Button /> reset button should match snapshot 1`] = `
.c0 {
  background-color: transparent;
  border: 0;
  color: #214154;
  cursor: pointer;
  display: inline-block;
  padding: 0;
}

.c0:hover {
  background-color: transparent;
  color: #3B5B6E;
}

<button
  className="c0"
>
  Button
</button>
`;
